test/Fail/Issue5763.err
Issue5763.agda:8.1-15: error: [NoParseForLHS]
Could not parse the left-hand side foo (fn x , y)
Operators used in the grammar:
  fn_, (prefix notation, unrelated) [fun (Issue5763.agda:3.3-6)]
when scope checking the left-hand side foo (fn x , y) in the
definition of foo
